# matchday-manager

./: .gitignore  README.md  pyproject.toml
.specify/: feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
specs/001-worldcup-manager/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-worldcup-manager/checklists/: requirements.md
specs/001-worldcup-manager/contracts/: engine-interface.md  event-schema.md  save-file-schema.md
src/matchday/: __init__.py  __main__.py  cli.py  formations.py  lineup.py  models.py  persistence.py
src/matchday/data/: fixtures.json  groups.json  squads.json  teams.json
src/matchday/match/: __init__.py  engine.py  fallback.py  prompt.py  provider.py  validate.py
src/matchday_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: support.py
tests/integration/: test_play_loop.py
tests/unit/: test_fallback.py  test_formations.py  test_lineup.py  test_validate.py
tools/: gen_data.py
