[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "matchday-manager"
version = "0.1.0"
description = "A single-player World Cup 2026 team-management game with an LLM match engine."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
matchday = "matchday.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
matchday = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
